added Google tag

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-7Y1C20LN19"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-7Y1C20LN19");
+    </script>
+
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -18,7 +33,7 @@
     </header>
     <div class="description">
       <p class="description__copy">
-        One owner, Military Tan GENERAL, in great condition with only 466 miles.
+        One owner, Military Tan GENERAL in great condition with only 466 miles.
         Includes: Lock & Ride full vented poly windshield, Lock & Ride poly rear
         pannel, winch, Rockford Fosgate Stage 1 audio, extra belt, side mirrors,
         Garmin GPS loaded with mapping software, RAM Mount, flood lights and a
